# shortlink

./: Cargo.toml  Dockerfile  flake.nix
src/: main.rs
templates/: index.html
