[package]
name = "shortlink"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-prom = "0.9"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
rand = "0.8"
prometheus = "0.13"
